--- a/TODO.org
+++ b/TODO.org
@@ -4,5 +4,14 @@
 CLOSED: [2022-12-22 Thu 20:55]
 ** DONE Register Wristband
 
-* TODO refactor SiteSidebar
+* DONE refactor SiteSidebar
+CLOSED: [2023-02-08 Wed 20:05]
 children components file use default export instead of named exports
+* TODO Refactor FlashMessages
+* Types of cards
+flash messsages
+panel
+things within a panel.
+dialogs
+
+
