--- a/TODO.org
+++ b/TODO.org
@@ -7,7 +7,9 @@ CLOSED: [2022-12-22 Thu 20:55]
 * DONE refactor SiteSidebar
 CLOSED: [2023-02-08 Wed 20:05]
 children components file use default export instead of named exports
-* TODO Refactor FlashMessages
+* DONE Refactor FlashMessages
+CLOSED: [2023-02-09 Thu 12:36]
+* TODO Refactor registration
 * Types of cards
 flash messsages
 panel
